Add country selector to home

--- a/client/index.jade
+++ b/client/index.jade
@@ -4,15 +4,19 @@ html(lang='en', ng-app='recargas')
     meta(charset='utf-8')      
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Placeholder
+    title Pied Piper
     link(rel='stylesheet', href='/vendor/Hover/css/hover-min.css', media='all')
+    link(href='/vendor/flag-css/dist/flag-css.css', rel='stylesheet')
+    link(rel="stylesheet", href="/vendor/angular-ui-select/dist/select.css")
     link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/vendor/selectize/dist/css/selectize.default.css')
     link(href='http://fonts.googleapis.com/css?family=Lily+Script+One', rel='stylesheet', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/index.css')
     link(rel='shortcut icon', href='/favicon.ico')
     script(src='/vendor/angular/angular.js')
+    script(src='/vendor/angular-sanitize/angular-sanitize.js')
       
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')       
@@ -33,5 +37,6 @@ html(lang='en', ng-app='recargas')
     script(src='/vendor/moment/moment.js')
     script(src='/vendor/braintree-angular/dist/braintree-angular.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
-
+    script(src='/vendor/angular-countrycodes/angular-countrycodes.js')
+    script(src='vendor/angular-ui-select/dist/select.js')
     script(src='/index.js')
