--- a/client/index.less
+++ b/client/index.less
@@ -39,16 +39,47 @@ nav {
     font-size: 3.2em;
     font-weight: 700;
   }
+  h3 {
+    font-weight: 200;
+  }
+  .stepOne {
+    font-weight: 700;
+  }
+  .country {
+    margin: 10% 0;
+  }
+  .selectize-input {
+    border:none;
+  }
+  .selectize-control.single .selectize-input, .selectize-dropdown.single {
+    padding: 15px;
+    font-size: 1.2em;
+  }
+  .btn.btn-continue {
+    padding: 15px;
+    background: transparent;
+    font-size: 1.3em;
+  }
+  .input-group-addon {
+    background: transparent;
+    color: white;
+    border: none;
+    font-size: 1.5em;
+    font-weight: 700;
+  }
 }
 
-.btn-user {
-  border: 2px solid @white;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 10px;
-  color: @white;
-  &:hover {
-    background: @white;
-    color: @coral;
+/* Billing Styling */
+
+.billing-header {
+  margin: -20px 0 40px;
+  h6 {
+    font-weight: 600;
+  }
+}
+.billing-header2 {
+  margin: 10px 0 40px;
+  h6 {
+    font-weight: 600;
   }
 }
