--- a/client/views/account/account.jade
+++ b/client/views/account/account.jade
@@ -4,8 +4,8 @@ section#account
       .sidebar-nav
         .well
           ul.nav.nav-list
-            li.item: a(href="#") Home
-            li.item: a(href="#") Top Ups
+            li.item: a(ui-sref='home') Home
+            li.item: a(ui-sref='recharge.selection') Top Ups
             li.item: a(href="#") How it Works
             li.item: a(href="#") Support
     .col-md-8
