--- a/client/views/nav/nav.jade
+++ b/client/views/nav/nav.jade
@@ -6,11 +6,11 @@ nav.navbar.navbar-default.navbar-static-top(ng-controller='NavCtrl')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a#logo.navbar-brand(ui-sref='home') Placeholder
+      a#logo.navbar-brand(ui-sref='home') Xoom
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right(ng-if='user')
         li: a.hvr-underline-reveal(ui-sref='account.info') {{user.firstName}} {{user.lastName}}
-        li: a.hvr-underline-reveal(href='#', ng-click='logout()' ) Logout
+        li: a.hvr-underline-reveal(href='#', ng-click='logout()') Logout
       ul.nav.navbar-nav.navbar-right(ng-if='!user')
         li: a.hvr-underline-reveal(ui-sref='user') User
       ul.nav.navbar-nav.navbar-right
