--- a/client/views/general/user/user.jade
+++ b/client/views/general/user/user.jade
@@ -15,6 +15,8 @@
       .form-group
         input.form-control(type='text', ng-model='signupForm.lastName', placeholder='Last Name')
       .form-group
+        input.form-control(type='tel', ng-model='signupForm.phone', placeholder='Cell Phone')
+      .form-group
         input.form-control(type='email', ng-model='signupForm.email', placeholder='Email')
       .form-group
         input.form-control(type='password', ng-model='signupForm.pass', placeholder='Password')
