--- a/client/views/recharge/selection/recharge-selection.jade
+++ b/client/views/recharge/selection/recharge-selection.jade
@@ -1,1 +1,5 @@
 h3 Selection
+
+form(action='/recharge/checkout', method='post')
+  braintree-dropin(options='dropinOptions') Loading payment form...
+  input.btn.btn-default(type='submit', value='Buy for $14')
