--- a/client/views/general/home/home.jade
+++ b/client/views/general/home/home.jade
@@ -32,7 +32,7 @@ section#info(ng-if='country.selected', style='overflow:hidden')
                 strong &nbsp; {{provider.name}}
               .col-md-6(style='text-align:right') {{provider.range}}
             .col-md-6.button.button-left Deals
-            .col-md-6.button.button-right 
+            .col-md-6.button.button-right(ng-click='select(provider)')
               | Select &nbsp;
               span.fa.fa-angle-right
               span.fa.fa-angle-right
